# analytics-project-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/analytics/: __init__.py
tests/: conftest.py  test_environment.py
